--- a/conf/ocsci/vsphere_lower_resource_reqs.yaml
+++ b/conf/ocsci/vsphere_lower_resource_reqs.yaml
@@ -3,6 +3,7 @@
 DEPLOYMENT:
   allow_lower_instance_requirements: false
 ENV_DATA:
+  platform: 'vsphere'
   worker_num_cpus: '8'
   master_num_cpus: '8'
   memory: '32768'
