--- a/conf/ocsci/vsphere_lower_resource_reqs.yaml
+++ b/conf/ocsci/vsphere_lower_resource_reqs.yaml
@@ -1,10 +1,11 @@
 ---
-# This config will lower requirements to support OCS in lower requirements
-DEPLOYMENT:
-  allow_lower_instance_requirements: false
 ENV_DATA:
   platform: 'vsphere'
+  deployment_type: 'upi'
+  worker_replicas: 3
+  master_replicas: 3
   worker_num_cpus: '8'
   master_num_cpus: '8'
   master_memory: '32768'
   compute_memory: '32768'
+  fio_storageutilization_min_mbps: 10.0
